--- a/aula 1/index.html
+++ b/aula 1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conversor de moedas</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css"/>
+    <script src="javaScript.js"></script>
 </head>
 <body>
     <img src="https://i.postimg.cc/GpCxYmvc/title.png" alt="Logo" class="logo">
