--- a/aula 1/aula1.html
+++ b/aula 1/aula1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de moedas</title>
     <link rel="stylesheet" type="text/css" href="estilo.css"/>
-    <script src="javaScript.js"></script>
+    <script src="javascript.js"></script>
 </head>
 <body>
     <img src="https://i.postimg.cc/GpCxYmvc/title.png" alt="Logo" class="logo">
