--- a/aula2/index.html
+++ b/aula2/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <img src="https://i.postimg.cc/GpCxYmvc/title.png" alt="Logo" class="logo">
-
-  <div class="container">
-    <div class="content">
-      <h2>Quem ganha, ganha em Wons!</h2>
-      <p> Que tal converter esse valor?</p>
-      <button onclick="conversor()">Bora converter!</button>
-    </div>
-  </div>
-  <footer>Alura - Imersão DEV - 2025</footer>
+  
+    <div class="container">
+        <div class="content">
+          <h2>Pra ganhar é preciso arriscar!</h2>
+          <p> PEDRA, PAPEL ou TESOURA?</p>
+          <button onclick="jogar()">Bora jogar!</button>
+        </div>
+      </div>
+      <footer>Alura - Imersão DEV - 2025</footer>
 </body>
 </html>
